Added endpoint to list role assignment logs
Replace sort in Java memory with order by database for all entities
Bump version